# poetry2nix_test

./: pyproject.toml  shell.nix
nix/: sources.json
