[tool.poetry]
name = "test_poetry2nix"
version = "0.1.0"
description = ""
authors = ["Test <test@test.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"
Cython = "^0.29.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
